# python-hexed

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: hexed.rst  index.rst
src/: _version.py
src/hexed/: __main__.py  cli.py
tests/: test_hexed.py
