[metadata]
name = hexed-thumdugger
version = 0.0.0
license = BSD-2-Clause
description = A playground package for exploring hex mapping as described at: https://www.redblobgames.com/grids/hexagons/
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Scott Barnett
author_email = thumdugger@gmail.com
url = https://github.com/thumdugger/python-hexed
project_urls =
    Documentation = https://python-hexed.readthedocs.io/
    Changelog = https://python-hexed.readthedocs.io/en/latest/changelog.html
    Issue Tracker = https://github.com/thumdugger/python-hexed/issues
classifiers =
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click >= 8.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts' =
    hexed = hexed.cli:main

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = hexed
default_section = THIRDPARTY
forced_separate = test_hexed
skip = .tox,.eggs,ci/templates,build,dist
